--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
 /* You can add global styles to this file, and also import other style files */
+ /*common css*/
+html, body {
+    height: 100%;
+}
+
+
+
+body {
+    margin: 0;
+    width: 100%;
+   height: 100%;
+    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color:#f5f5f5!important ;
+}
+
+* {
+    box-sizing: border-box;
+  } 
+
+  .wrapper{
+    width: 100%;
+    max-width: 90rem;
+    margin: 0 ;
+    box-sizing: border-box;
+  }
+
+  .main{
+    padding-left: 280px;
+    padding-top: 90px;
+    padding-right: 20px;
+   
+  }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Slab', serif;
+}
+
+
+
+/*search inputbox*/
+
+.searchInput {
+  width: 250px;
+  height:40px;
+  background-color:#f5f5f5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: 0.3s;
+}
+
+.searchInput::placeholder {
+  color:  #aaa;
+  opacity: 1; /* Firefox */
+}
+
+
+
+.searchInput:focus {
+  border-color:  #6eb74c;
+ 
+}
+
+.inputWithIcon .searchInput {
+  padding-left: 40px;
+}
+
+.inputWithIcon {
+  position: relative;
+  width: 250px;
+}
+
+.inputWithIcon i {
+  position: absolute;
+  left: 0;
+  top: 20%;
+  padding: 9px 8px;
+  color: #aaa;
+  transition: 0.3s;
+}
+
+.inputWithIcon .searchInput:focus + i {
+  color: #6eb74c;
+}
+/*search inputbox*/
