--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -161,3 +161,102 @@
   ::ng-deep #chart {
     height: 200px;
 }
+
+
+
+/*Tabs Bar*/
+.tabsDiv{
+  margin: 0px;
+  margin-top: -60px;
+}
+
+#tabs {
+
+  width: 100%;
+  height:30px; 
+  padding-right: 2px;
+  margin-top: 30px;
+  margin-right:30px
+  
+
+}
+a {cursor:pointer;}
+
+#tabs li {
+   float:right; 
+   list-style:none; 
+   outline:none;
+   padding:0px;
+   margin:0px;
+   margin-right: 1px;
+     
+}
+
+#tabs li a {
+
+   font-family:Arial, Helvetica, sans-serif; 
+   font-size: small;
+   font-weight: bold; 
+   color: #2f8850;
+   padding: 12px 22px;;
+   display:block; 
+   background: #FFF;
+   border-bottom-left-radius: 3px;
+   border-bottom-right-radius: 3px;
+   text-decoration:none;
+   outline:none;
+   
+ 
+}
+
+#tabs li a.inactive{
+  padding: 10px 20px;
+  display:block; 
+  background: #FFF;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+   color:#989797;;
+   background: #EEE;
+  outline:none;
+ 
+
+}
+
+#tabs li a:hover, #tabs li a.inactive:hover {
+
+
+   color: #5685bc;
+     outline:none;
+}
+
+#tabs li  .closeTab:hover {
+  color:red;
+}
+
+#tabs li>.closeAll{
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 12px;
+  padding-right: 10px;
+  color: white;
+  border-bottom-left-radius: 3px;
+  background-color: red;
+  border-bottom-right-radius: 3px;
+  font-size: 14px;
+}
+
+#tabs li>.closeAll:hover{
+  color: #2f8850;
+  cursor: pointer;
+}
+
+.container {
+
+          
+   width:100%; 
+ 
+
+}
+
+
+/*tabs Bar*/
